--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,38 +1,74 @@
 .App {
-  text-align: center;
+  background-color: #161e2c;
+  height: 100vh;
+  color: rgb(224, 226, 209);
+}
+.main-container {
+  width: 80%;
+  margin: auto;
+  border-radius: 8px;
+  padding: 8px;
+  height: 90vh;
+  background-color: #313c4e;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.folder-tabs {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  justify-content: space-around;
 }
 
-.App-link {
-  color: #61dafb;
+.folder-tab {
+  padding: 8px 0px 8px 0px;
+  width: 20%;
+  border-radius: 8px 8px 0px 0px;
+  text-align: center;
+  background-color: rgb(109, 109, 109);
+  /* background-color: #192841; */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.selected-tab {
+  padding: 8px 0px 8px 0px;
+  width: 20%;
+  border-radius: 8px 8px 0px 0px;
+  text-align: center;
+  background-color: #1f2e49;
+  /* background-color: #192841; */
+}
+
+.work-space {
+  display: flex;
+  padding: 16px;
+  border-radius: 8px;
+  height: 86%;
+  background-color: #1f2e49;
+}
+
+.notes-list {
+  border: 1px solid rgb(186, 217, 253);
+  border-radius: 8px;
+  width: 20%;
+  margin: 0px 8px 0px 0px;
+  background-color: #161e2c;
+}
+
+.notes-list-item {
+  border-bottom: 1px solid rgb(174, 211, 253);
+  padding: 8px;
+}
+
+.current-note {
+  border: 1px solid rgb(174, 211, 253);
+  width: 80%;
+  border-radius: 8px;
+  margin: 0px 0px 0px 8px;
+  background-color: #161e2c;
+}
+
+.note-title {
+  border-bottom: 1px solid rgb(174, 211, 253);
+  padding: 8px;
+}
+
+.note-content {
+  padding: 8px;
 }
